Fixing superscript line spacing error.

--- a/themes/hugo-tranquilpeak-with-katex/static/css/style.css
+++ b/themes/hugo-tranquilpeak-with-katex/static/css/style.css
@@ -186,6 +186,29 @@ blockquote {
   h6 {
     font-size: 1.45rem; } }
 
+sub, sup {
+  /* Specified in % so that the sup/sup is the
+     right size relative to the surrounding text */
+  font-size: 75%;
+  /* Zero out the line-height so that it doesn't
+     interfere with the positioning that follows */
+  line-height: 0;
+  /* Where the magic happens: makes all browsers position
+     the sup/sup properly, relative to the surrounding text */
+  position: relative;
+  /* Note that if you're using Eric Meyer's reset.css, this
+     is already set and you can remove this rule */
+  vertical-align: baseline; }
+
+sup {
+  /* Move the superscripted text up */
+  top: -0.5em; }
+
+sub {
+  /* Move the subscripted text down, but only
+     half as far down as the superscript moved up */
+  bottom: -0.25em; }
+
 .task-list {
   list-style-type: none; }
   .task-list .task-list-item {
